--- a/understand.ipynb
+++ b/understand.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
     "\n",
     "    text = tokenizer.decode(inputs[\"input_ids\"][0])\n",
     "    # run the loop to generate new tokens after input, append to input and decode\n",
-    "    if tokens_to_gen != None:\n",
+    "    if tokens_to_gen is not None:\n",
     "        # generate new tokens all at once; then append them to input, then logitlens them all\n",
     "        output = model.generate(\n",
     "            inputs[\"input_ids\"],\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
     "        if 'NotoSans' in f and 'UI' not in f:\n",
     "            fm.fontManager.addfont(f)\n",
     "            # print(f)\n",
-    "    except:\n",
+    "    except Exception:\n",
     "        print(f)"
    ]
   },
